# aoe-extensions-support

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/didi/aoe/extensions/support/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/didi/aoe/extensions/support/app/: MainActivity.kt
support/: CMakeLists.txt  build.gradle
support/src/androidTest/java/com/didi/aoe/extensions/support/: ExampleInstrumentedTest.kt
support/src/main/: AndroidManifest.xml
support/src/main/cpp/aoe_support/: aoe_support.cpp
support/src/main/cpp/aoe_support/include/: aoe_support.h
support/src/main/java/com/didi/aoe/extensions/support/common/: DataType.kt  Operator.kt  Processor.kt  SequentialProcessor.kt
support/src/main/java/com/didi/aoe/extensions/support/image/: AoeSupport.kt  ImageConversions.kt  ImageOperator.kt  ImageProcessor.kt  TensorImage.kt
support/src/main/java/com/didi/aoe/extensions/support/image/ops/: CropOp.kt  ResizeOp.kt  RotateOp.kt  TensorOperatorWrapper.kt
support/src/main/java/com/didi/aoe/extensions/support/tensor/: TensorOperator.kt  TensorProcessor.kt
support/src/main/java/com/didi/aoe/extensions/support/tensor/buffer/: TensorBuffer.kt  TensorBufferFloat.kt  TensorBufferUint8.kt
support/src/main/java/com/didi/aoe/extensions/support/utils/: BitmapExt.kt
support/src/main/java/com/didi/aoe/extensions/support/widget/: BorderDrawer.kt
support/src/test/java/com/didi/aoe/extensions/support/: ExampleUnitTest.kt
(+1 files in other folders)
